# quill-v3

./: Cargo.toml  TODO.md
fcommon/: Cargo.toml
fcommon/src/: file_reader.rs  interning.rs  lib.rs  result.rs
feather/: Cargo.toml
feather/src/: main.rs
fexpr/: Cargo.toml
fexpr/src/: basic.rs  definition.rs  expr.rs  inductive.rs  lib.rs  module.rs  multiplicity.rs  queries.rs  result.rs  universe.rs
fkernel/: Cargo.toml
fkernel/src/: basic.rs  deps.rs  lib.rs  module.rs  multiplicity.rs  result.rs  universe.rs
fkernel/src/expr/: basic.rs  convert.rs  free_vars.rs  mod.rs  nary_operations.rs  traverse.rs
fkernel/src/inductive/: basic.rs  certify.rs  check.rs  check_type.rs  check_variant.rs  mod.rs
fkernel/src/term/: free_vars.rs  mod.rs  nary_operations.rs  traverse.rs
fkernel/src/typeck/: def.rs  defeq.rs  definition.rs  infer.rs  mod.rs  unfold.rs  whnf.rs
fkernel_tests/: Cargo.toml  build.rs
fkernel_tests/tests/: certify.rs
fkernel_tests/tests/src/: add.ron  basic_fix.ron  basic_inductives.ron  basic_inductives.sexp  basic_match.ron  borrow_fix.ron  borrow_fix_whnf.ron  cast.ron  complicated_recursors.sexp  computation_rule.sexp  delta.ron  delta.sexp  id.ron  id.sexp  intro_rules.ron  match_defeq.ron  or_comm.ron  prod_squash.ron  products_coproducts.ron  products_coproducts.sexp  ski.ron  ski.sexp
fnodes/: Cargo.toml
fnodes/src/: basic_nodes.rs  definition.rs  expr.rs  inductive.rs  lib.rs  module.rs  queries.rs  s_expr.rs  serialise.rs  universe.rs
fnodes_macros/: Cargo.toml
fnodes_macros/src/: lib.rs
qdb/: Cargo.toml
qdb/src/: lib.rs
qdelab/: Cargo.toml
qdelab/src/: lib.rs
qelab/: Cargo.toml
qelab/src/: constraint.rs  db_impls.rs  definition.rs  elaborator.rs  infer.rs  lib.rs  preprocess.rs  reduce.rs  solve.rs
qformat/: Cargo.toml
qformat/src/: lib.rs  pretty_print.rs
qparse/: Cargo.toml
qparse/src/: def.rs  expr.rs  inductive.rs  lex.rs  lib.rs  parse.rs  parser.rs  pre_lex.rs
quill/: Cargo.toml
quill/src/: main.rs
test/: test.quill  test.ron  test2.sexp
