[package]
name = "fcommon"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = { version = "0.1", optional = true }
salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

[features]
