[package]
name = "feather"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fcommon = { path = "../fcommon", features = ["ariadne"] }
fkernel = { path = "../fkernel" }
fnodes = { path = "../fnodes" }
qdb = { path = "../qdb" }
salsa = "0.16.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
upcast = "0.1.0"
