[package]
name = "fexpr"
version = "0.0.0"
edition = "2021"

[dependencies]
chumsky = "0.8"
fcommon = { path = "../fcommon" }
salsa = "0.16"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
tracing = "0.1"
upcast = "0.1"

[features]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
