[package]
name = "fkernel"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fcommon = { path = "../fcommon" }
fexpr = { path = "../fexpr" }
salsa = "0.16"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
upcast = "0.1"

[dev-dependencies]
qdb = { path = "../qdb" }
