[package]
name = "fkernel"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8"
console = { version = "0.15", optional = true }
fcommon = { path = "../fcommon" }
ron = "0.8"
salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
qdb = { path = "../qdb" }
