[package]
name = "fkernel_tests"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fcommon = { path = "../fcommon", features = ["ariadne"] }
fnodes = { path = "../fnodes" }
fkernel = { path = "../fkernel" }
salsa = "0.16"

[dev-dependencies]
qdb = { path = "../qdb" }
