[package]
name = "fkernel_tests"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fcommon = { path = "../fcommon", features = ["ariadne"] }
fkernel = { path = "../fkernel", features = ["console"] }
salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022" }

[dev-dependencies]
qdb = { path = "../qdb" }
