[package]
name = "fnodes"
version = "0.0.0"
edition = "2021"

[dependencies]
chumsky = "0.8.0"
fcommon = { path = "../fcommon" }
salsa = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
serde-lexpr = "0.1.2"
tracing = "0.1.37"
upcast = "0.1.0"

[features]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
