[package]
name = "qdb"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fcommon = { version = "0.0.0", path = "../fcommon" }
fkernel = { version = "0.0.0", path = "../fkernel" }
fnodes = { version = "0.0.0", path = "../fnodes" }
notify-debouncer-mini = { version = "0.2", default-features = false }
salsa = "0.16"
