[package]
name = "qdb"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fcommon = { version = "0.0.0", path = "../fcommon" }
fexpr = { version = "0.0.0", path = "../fexpr" }
fkernel = { version = "0.0.0", path = "../fkernel" }
notify-debouncer-mini = { version = "0.2", default-features = false }
salsa = "0.16"
