[package]
name = "qdb"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fcommon = { path = "../fcommon" }
fexpr = { path = "../fexpr" }
fkernel = { path = "../fkernel" }
qelab = { path = "../qelab" }
qparse = { path = "../qparse" }
notify-debouncer-mini = { version = "0.2", default-features = false }
salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022" }
