[package]
name = "qdelab"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fcommon = { path = "../fcommon" }
fkernel = { path = "../fkernel" }
qformat = { path = "../qformat" }
qparse = { path = "../qparse" }
tracing = "0.1"
