[package]
name = "qelab"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fcommon = { path = "../fcommon" }
fkernel = { path = "../fkernel" }
qparse = { path = "../qparse" }
salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022" }
tracing = "0.1"
