[package]
name = "qelab"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fcommon = { path = "../fcommon" }
fkernel = { path = "../fkernel" }
qdelab = { path = "../qdelab" }
qformat = { path = "../qformat" }
qparse = { path = "../qparse" }
rpds = "0.12"
salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022" }
tracing = "0.1"
