[package]
name = "quill"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fcommon = { path = "../fcommon", features = ["ariadne"] }
fkernel = { path = "../fkernel", features = ["console"] }
qdb = { path = "../qdb" }
qdelab = { path = "../qdelab" }
qformat = { path = "../qformat" }
qparse = { path = "../qparse" }
ron = "0.8"
salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022" }
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.qelab]
path = "../qelab"
# Disable elaborator diagnostics by putting a `#` before the next line.
features = ["elaborator_diagnostics"]
